--- a/preloaderstyle.css
+++ b/preloaderstyle.css
@@ -5,6 +5,6 @@
 }
 .loader-container{
     margin-top: 0vh; /* bring loader into viewport */
-    animation: siteLoader 1.5s forwards cubic-bezier(0.950, 0.050, 0.795, 0.035); 
+    animation: siteLoader 1500ms forwards cubic-bezier(0.950, 0.050, 0.795, 0.035); 
     animation-delay: 3500ms; 
 }
