--- a/preloader/preloaderstyle.css
+++ b/preloader/preloaderstyle.css
@@ -4,7 +4,7 @@
     }
 }
 .loader-container{
-    margin-top: 0vh; /* bring loader into viewport */
+    margin-top: 0vh; 
     animation: siteLoader 1500ms forwards cubic-bezier(0.950, 0.050, 0.795, 0.035); 
     animation-delay: 3500ms; 
 }
